trying to fix link

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <p>
         hello worlds
     </p>
-    <a href="aboutme.html">About Me</a>
+    <a href="aboutme.html" target= _blank>About Me</a>
 </body>
