--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <header>
-
+    <link rel="stylesheet" href="index.css">
 </header>
 <body>
+    <h1>
+        My Spiritual Journal
+    </h1>
     <p>
         hello worlds
     </p>
