--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,10 @@
 
 </header>
 <body>
+    <h1>
+        About Me
+    </h1>
     <p>
-        This is a page about me
+        This is a page about me. I don't know what to add here yet.
     </p>
 </body>
