--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         My Spiritual Journal
     </h1>
     <p>
-        hello worlds
+        Throughout the course of my life, I have been inspired by a variety of Gospel Topics.
+        This is a place where I can share my thoughts, feelings, and impressions of those topics.
+        Right now, it is quite simple, but I hope as my knowledge of coding grows, so will my ability to format
+        this website in the best way for you to experience my thoughts.
+
+        
     </p>
     <a href="aboutme.html" target= _blank>About Me</a>
 </body>
