Added link to first thought

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         Right now, it is quite simple, but I hope as my knowledge of coding grows, so will my ability to format
         this website in the best way for you to experience my thoughts.
 
+        <ul>
+            <li><a href="whoisthesavior.html">Who is the Savior?</a></li>
+        </ul>
+
         
     </p>
     <a href="aboutme.html" target= _blank>About Me</a>
