--- a/whoisthesavior.html
+++ b/whoisthesavior.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<header>
+<html lang="en-us"></html>
+<head>
+    <title>Who is the Savior?</title>
     <link rel="stylesheet" href="spiritualthought.css">
-</header>
+</head>
 <body>
     <h1>Who is the Savior?</h1>
     <h2>
