--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<header>
-
-</header>
+<html lang="en-us"></html>
+<head>
+    <title>About Me</title>
+</head>
 <body>
     <h1>
         About Me
