--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<header>
+<html lang="en-us"></html>
+<head>
+    <title>Home Page</title>
     <link rel="stylesheet" href="index.css">
-</header>
+</head>
 <body>
     <h1>
         My Spiritual Journal
@@ -11,12 +13,10 @@
         This is a place where I can share my thoughts, feelings, and impressions of those topics.
         Right now, it is quite simple, but I hope as my knowledge of coding grows, so will my ability to format
         this website in the best way for you to experience my thoughts.
+    </p>
 
         <ul>
             <li><a href="whoisthesavior.html">Who is the Savior?</a></li>
-        </ul>
-
-        
-    </p>
+        </ul>  
     <a href="aboutme.html" target= _blank>About Me</a>
 </body>
