--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en-us"></html>
-<head>
-    <title>Home Page</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <h1>
-        My Spiritual Journal
-    </h1>
-    <p>
-        Throughout the course of my life, I have been inspired by a variety of Gospel Topics.
-        This is a place where I can share my thoughts, feelings, and impressions of those topics.
-        Right now, it is quite simple, but I hope as my knowledge of coding grows, so will my ability to format
-        this website in the best way for you to experience my thoughts.
-    </p>
-
+<html lang="en-us">
+    <head>
+        <title>Home Page</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <h1>
+            My Spiritual Journal
+        </h1>
+        <p>
+            Throughout the course of my life, I have been inspired by a variety of Gospel Topics.
+            This is a place where I can share my thoughts, feelings, and impressions of those topics.
+            Right now, it is quite simple, but I hope as my knowledge of coding grows, so will my ability to format
+            this website in the best way for you to experience my thoughts.
+        </p>
         <ul>
             <li><a href="whoisthesavior.html">Who is the Savior?</a></li>
         </ul>  
-    <a href="aboutme.html" target= _blank>About Me</a>
-</body>
+        <a href="aboutme.html" target= _blank>About Me</a>
+    </body>
+</html>
