--- a/whoisthesavior.html
+++ b/whoisthesavior.html
@@ -1,62 +1,63 @@
 <!DOCTYPE html>
-<html lang="en-us"></html>
-<head>
-    <title>Who is the Savior?</title>
-    <link rel="stylesheet" href="spiritualthought.css">
-</head>
-<body>
-    <h1>Who is the Savior?</h1>
-    <h2>
-        Background
-    </h2>
-    <p>
-        As I listened to Elder Uchtdorf give his talk, <a href=https://www.churchofjesuschrist.org/study/general-conference/2018/04/behold-the-man?lang=eng&gclid=Cj0KCQjwtMCKBhDAARIsAG-2Eu_S13oklvgqKnZKbmI5JAhH1BftFV9SGPBflUxZOmlBTwChq8RJafwaAjVeEALw_wcB target=_blank>"Behold the Man"</a>,
-        I questioned the phrase. Elder Uchtorf lovingly talked about what it means to behold Jesus Christ, but I found myself more troubled by the phrase.
-        Jesus Christ was more than a man and I really wanted to explore that concept. Who was "the man?"
-    </p>
+<html lang="en-us">
+    <head>
+        <title>Who is the Savior?</title>
+        <link rel="stylesheet" href="spiritualthought.css">
+    </head>
+    <body>
+        <h1>Who is the Savior?</h1>
+        <h2>
+            Background
+        </h2>
+        <p>
+            As I listened to Elder Uchtdorf give his talk, <a href=https://www.churchofjesuschrist.org/study/general-conference/2018/04/behold-the-man?lang=eng&gclid=Cj0KCQjwtMCKBhDAARIsAG-2Eu_S13oklvgqKnZKbmI5JAhH1BftFV9SGPBflUxZOmlBTwChq8RJafwaAjVeEALw_wcB target=_blank>"Behold the Man"</a>,
+            I questioned the phrase. Elder Uchtorf lovingly talked about what it means to behold Jesus Christ, but I found myself more troubled by the phrase.
+            Jesus Christ was more than a man and I really wanted to explore that concept. Who was "the man?"
+        </p>
 
-    <h3>John 19:5</h3>
-    <p class="scripture">
-        Then came Jesus forth, wearing the crown of thorns, and the purple robe.
-        And <em>Pilate</em> saith unto them, <strong>Behold the man!</strong>
-    </p>
+        <h3>John 19:5</h3>
+        <p class="scripture">
+            Then came Jesus forth, wearing the crown of thorns, and the purple robe.
+            And <em>Pilate</em> saith unto them, <strong>Behold the man!</strong>
+        </p>
 
-    <h2>The "man"</h2>
-    <h4>Jesus of Nazareth</h4>
-    <p>
-        Pilate, in trying to wash his hands of his guilt, missed it. He told them to behold a <em>man</em>,
-        an innocent mortal, not <em>the Son of God</em>. His intention was certainly misguided but I believe he 
-        thought it to be relatively pure. he scourged Christ in an effort to appeal to the Jew's humanity. 
-        Pilate, a Roman and worshiper of gods such as Jupiter and Neptune, 
-        the same wicked judge who had effectively spat upon the Jewish faith <em>(see Jesus the Christ)</em>
-        was now simply trying to have the Jews see what he did: 
-        an innocent man who was being tried unjustly and deserved to be set free.          
-    </p>
-    <h4>Jesus, the Carpenter's Son</h4>
-    <p>
-        The Jews on the other hand, or rather the ruling class of the Jews, had become a hypocritical people. 
-        They only wanted power and influence over their people. They not only feared the influence that 
-        Christ was gaining that was taking away their esteem, but they also feared the Romans would see Christ 
-        and his gathering as an attempt to revolt. Either way, this would lead to a decline in their power and their influence. 
-        While Pilate saw an innocent man, they saw a threat. A blasphemer, liar, and hypocrite. 
-        Through <strong>their</strong> hypocritically blinded eyes, they saw an enemy who had to be crucified.
+        <h2>The "man"</h2>
+        <h4>Jesus of Nazareth</h4>
+        <p>
+            Pilate, in trying to wash his hands of his guilt, missed it. He told them to behold a <em>man</em>,
+            an innocent mortal, not <em>the Son of God</em>. His intention was certainly misguided but I believe he 
+            thought it to be relatively pure. he scourged Christ in an effort to appeal to the Jew's humanity. 
+            Pilate, a Roman and worshiper of gods such as Jupiter and Neptune, 
+            the same wicked judge who had effectively spat upon the Jewish faith <em>(see Jesus the Christ)</em>
+            was now simply trying to have the Jews see what he did: 
+            an innocent man who was being tried unjustly and deserved to be set free.          
+        </p>
+        <h4>Jesus, the Carpenter's Son</h4>
+        <p>
+            The Jews on the other hand, or rather the ruling class of the Jews, had become a hypocritical people. 
+            They only wanted power and influence over their people. They not only feared the influence that 
+            Christ was gaining that was taking away their esteem, but they also feared the Romans would see Christ 
+            and his gathering as an attempt to revolt. Either way, this would lead to a decline in their power and their influence. 
+            While Pilate saw an innocent man, they saw a threat. A blasphemer, liar, and hypocrite. 
+            Through <strong>their</strong> hypocritically blinded eyes, they saw an enemy who had to be crucified.
 
-    </p>
-    <h4>Jesus, the Messiah</h4>
-    <p>
-        His Disciples knew. They beheld not a man, but the Son of God. How they must have wept. 
-        Unfortunately they believed this to be a great tragedy, an end to what was supposed to be a Messianic Reign. 
-        The Supreme Lord of Heaven and Earth crucified without saying a word. They did not yet realize quite what they were beholding. 
-        To them, they beheld the Son of God at the mercy of Jew and Gentile alike. 
-    </p>
-    <h4><em>His</em> Son</h4>
-    <p>
-        This is most certainly the greatest tragedy of that day. 
-        When Pilate told the Jews to "Behold the man", and the Jews beheld a threat, and the disciples beheld the Messiah defeated, God beheld His Son. 
-        His faithful and true Son who obeyed all the commands of His Father. His Firstborn, submissive as a child. 
-        How terrible His wrath must have been towards the hearts of those who stood in an attempt to crucify His Son. 
-        And yet, when the Jews cried "crucify him" I can only imagine that through tears, the Father must have hollowly echoed the same words. 
-        "Yes, crucify Him, because He is the only one who can save the rest of you. Crucify your Savior through hate and He will free you out of His love." 
-        The Father recognized the importance of this moment and He, in his infinite love to the rest of us, resigned at the words of the wicked, "crucify him".
-    </p>
-</body>
+        </p>
+        <h4>Jesus, the Messiah</h4>
+        <p>
+            His Disciples knew. They beheld not a man, but the Son of God. How they must have wept. 
+            Unfortunately they believed this to be a great tragedy, an end to what was supposed to be a Messianic Reign. 
+            The Supreme Lord of Heaven and Earth crucified without saying a word. They did not yet realize quite what they were beholding. 
+            To them, they beheld the Son of God at the mercy of Jew and Gentile alike. 
+        </p>
+        <h4><em>His</em> Son</h4>
+        <p>
+            This is most certainly the greatest tragedy of that day. 
+            When Pilate told the Jews to "Behold the man", and the Jews beheld a threat, and the disciples beheld the Messiah defeated, God beheld His Son. 
+            His faithful and true Son who obeyed all the commands of His Father. His Firstborn, submissive as a child. 
+            How terrible His wrath must have been towards the hearts of those who stood in an attempt to crucify His Son. 
+            And yet, when the Jews cried "crucify him" I can only imagine that through tears, the Father must have hollowly echoed the same words. 
+            "Yes, crucify Him, because He is the only one who can save the rest of you. Crucify your Savior through hate and He will free you out of His love." 
+            The Father recognized the importance of this moment and He, in his infinite love to the rest of us, resigned at the words of the wicked, "crucify him".
+        </p>
+    </body>
+</html>
