--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en-us"></html>
-<head>
-    <title>About Me</title>
-</head>
-<body>
-    <h1>
-        About Me
-    </h1>
-    <p>
-        This is a page about me. I don't know what to add here yet.
-    </p>
-</body>
+<html lang="en-us">
+    <head>
+        <title>About Me</title>
+    </head>
+    <body>
+        <h1>
+            About Me
+        </h1>
+        <p>
+            This is a page about me. I don't know what to add here yet.
+        </p>
+    </body>
+</html>
