--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         </p>
         <ul>
             <li><a href="whoisthesavior.html">Who is the Savior?</a></li>
+            <li><a href="livingchrist.html">Understanding the Living Christ</a></li>
+            <li><a href="hehasmanynames.html">He Has Many Names</a></li>
         </ul>  
         <a href="aboutme.html" target= _blank>About Me</a>
     </body>
