--- a/livingchrist.html
+++ b/livingchrist.html
@@ -8,10 +8,81 @@
         <h1>Understanding the Living Christ</h1>
         <h2>Background</h2>
         <p>
-            As I read the document, <a href=https://www.churchofjesuschrist.org/bc/content/shared/content/english/pdf/36035_000_25_livingchrist.pdf" target="blank">The Living Christ</a>, 
+            As I read the document, <a href=https://www.churchofjesuschrist.org/pages/the-living-christ-the-testimony-of-the-apostles?lang=eng" target="blank">The Living Christ</a>, 
             I questioned the significance of that title. Jesus Christ has many names, see my thoughts on each name I have found thus far <a href=hehasmanynames.html target="blank">here.</a>
             With so many options, what led the First Presidency and the Council of the Twelve Apostles to settle on focusing on this specific name? Certainly they had their reasons.
             This study is my attempt to find the importance and eternal significance of that name.
+        </p>
+        <h3>Matthew 26:63</h3>
+        <p class="scripture">
+            But Jesus held his peace. And the high priest answered and said unto him, I adjure thee by the living God, that though tell us whether thou be the Christ, the Son of God.
+        </p>
+        <p>
+            The Jews, as wicked as they were, understood the importance of a living God. As fmany faults as they had at this time, even they recognized a significance for the living aspect of God.
+            They had many flaws, but recognizing the holiness of names was one thing they generally did fairly well.
+        </p>
+        <h3>Alma 7:6</h3>
+        <p class="scripture">
+            But behold, I trust that ye are not in a state of so much unbelief as were your brethren; I trust that ye are not lifted up in the pride of your hearts; yea, I trust that ye have not 
+            set your hearts upon riches and the vain things of the world; yea, I trust that you do not worship idols, but that ye do worship the true and the living God, and that ye look forward 
+            for the remission of your sins, with an everlasting faith, which is to come.
+        </p>
+        <h2>The Cross</h2>
+        <p>
+            Here is one importance to understanding that we have a Living Christ. If we think of the distinction made in worshipping the LIVING Christ, the idols it may be referring to could be 
+            things such as having the cross as the symbol of religion. And this is not to say that other churches typically worship the cross but often people do use it as evidence that we are not Christian. 
+            The cross does not make one a Christian, following Him does. Jesus Christ Lives. He is no longer on the cross, it is a symbol of His death, not His life. And again, this is not to say that all 
+            churches are bad for having the cross but it does not make one Christian. 
+        </p>
+        <p>
+            I had a companion on my mission, Elder Dike, who added this insight, "We look <em>forward</em> for a remission of our sins. Having faith in a Living Christ is having faith in things to come. 
+            Having faith in a cross is having faith in what has been."
+        </p>
+        <p>
+            We must understand that He is Living to know what we put our faith in. Not a cross, but a Savior. <em>Our</em> Savior.
+        </p>
+        <h3>John 6:51, 57</h3>
+        <p class="scripture">
+            <strong>51:</strong> I am the living bread which came down from heaven: if any man eat of this bread, he shall live for ever: and the bread that I will give is my flesh, which I will give for the life of the world.<br>
+            <strong>57:</strong> As the living Father hath sent me, and I live by the Father: so he that eateth me, even he shall live by me.
+        </p>
+        <h2>The Power to Live</h2>
+        <p>
+            Another essential element in the Living Christ is that He holds the power to give life. As His Father is a Living God, so must He become a Living Savior. The Living Christ is the one who broke the bands of death that 
+            The Atoning Savior subjected Himself to. This allowed Him to live again which in turn allows us to live again.
+        </p>
+        <p>
+            We must understand that He Lives again to know that we can live again as well.
+        </p>
+        <p class="scripture">
+            Brigham Young eloquently taught concerning resurrection, "This was no miracle to him. He had the issues of life and death in his power; he had power to lay down his life and power to take it up again. 
+            This is what he says, and we must believe this if we believe the history of the Savior and the sayings of the Apostles recorded in the New Testament. Jesus had this power in and of himself; the Father bequeathed it to him; 
+            it was his legacy, and he had the power to lay down his life and take it again" (DBY, 340–41). 
+        </p>
+        <h3>Matthew 22:32</h3>
+        <p class="scripture">
+            I am the God of Abraham, and the God of Isaac, and the God of Jacob? God is not the God of the dead, but of the living.
+        </p>
+        <h3>Mark 12:27</h3>
+        <p class="scripture">
+            He is not the God of the dead, but the God of the living: ye therefore do greatly err.
+        </p>
+        <h3>Luke 20:38</h3>
+        <p class="scripture">
+            For he is not a God of the dead, but of the living: for all live unto him.
+        </p>
+        <h3>Romans 14:9</h3>
+        <p class="scripture">
+            For to this end Christ both died, and rose, and revived, that he might be Lord both of the dead and living.
+        </p>
+        <h2>A Pivotal Shift:The Dead Become the Living</h2>
+        <p>
+            Before The Anointed took on His great purpose and died so men could live, He could not claim Himself to be a God of the dead. How does this pertain to Him as the Living Christ, though? By becoming the God of the dead,
+            He gives them power to live again. Because He took up life, and we therefore can live again, the dead are not dead forever. "The course of the Lord is one eternal round" so what was previously stuck in death will now become living again.
+            He is the God of the Living as well as the God of the dead who will live once again.
+        </p>
+        <p>
+            We must understand that He lives to know that He is a God of all, including our loved ones who have moved on.
         </p>
     </body>
 </html>
